Downgrade to Java 20